--- a/week05/index.html
+++ b/week05/index.html
@@ -16,8 +16,7 @@
 </head>
 
 <body>
-    <div class="px-5 py-3" >
-    <div class="row">
+    <div class="row no-gutters">
         <div class="col-3">
             <nav class="sidebar py-1 px-5">
                 <h1 class="mb-5 mt-5">
@@ -98,18 +97,18 @@
                     <ul class="ml-auto d-flex">
                         <li class="nav-item list-unstyled">
                             <a class="nav-link text-dark" href="#" tabindex="-1" aria-disabled="true">
-                                <span class="material-icons">search</span>
+                                <span class="material-icons vertical-align-bottom">search</span>
                             </a>
                         </li>
                         <li class="nav-item list-unstyled">
                             <a class="nav-link text-dark" href="#" tabindex="-1" aria-disabled="true">
-                                <span class="material-icons">notifications_active</span>
+                                <span class="material-icons vertical-align-bottom">notifications_active</span>
                             </a>
                         </li>
                     </ul>
                 </div>
             </nav>
-            <div class="row">
+            <div class="row no-gutters">
                 <div class="col-4">
                     <p>
                         <a class="btn dropdown-toggle" data-toggle="collapse" href="#collapseExample" role="button"
@@ -119,11 +118,11 @@
                     </p>
                     <div class="collapse" id="collapseExample">
                         <div class="card card-body ">
-                            <ul class="d-flex justify-content-between flex-wrap list-unstyled all">
-                                <li>Chapter Assignment 2</li>
-                                <li class="text-right">4 hrs ago</li>
-                                <li class="font-weight-bold">Please check this file…</li>
-                                <li class="text-right text-secondary">Emily Wang</li>
+                            <ul class="d-flex justify-content-between flex-wrap list-unstyled all ">
+                                <li >Chapter Assignment 2</li>
+                                <li class="text-right ">4 hrs ago</li>
+                                <li class="font-weight-bold ">Please check this file…</li>
+                                <li class="text-right text-secondary ">Emily Wang</li>
                             </ul>
                         </div>
                         <div class="card card-body ">
@@ -152,9 +151,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-8">
-                    <div class="card">
-                        <div class="card-header  flex-wrap bg-primary-light">
+                <div class="col-8 px-5">
+                    <div class="card rounded-0">
+                        <div class="card-header  flex-wrap bg-primary-light ">
                             <div class="row ">
                                 <div class="col-6">
                                     <p class="mb-0">Chapter Assignment 2 / HTML&CSS</p>
@@ -295,7 +294,6 @@
             </div>
         </div>
     </div>
-</div>
 
 
     <!-- Optional JavaScript -->
