--- a/weeko6/index.html
+++ b/weeko6/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
@@ -13,14 +13,15 @@
 
 <body>
     <header class="mb-5">
-        <div class="container" style="position: relative;">
-            <nav class="navbar navbar-expand-lg navbar-light bg-transparent px-0 postion-top justify-content-around">
+        <div class="container position-relative">
+            <nav
+                class="navbar navbar-expand-lg navbar-light bg-transparent px-0 position-absolute postion-top justify-content-around">
                 <button class="navbar-toggler border-0 pl-0" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <i class="material-icons text-white text-md-dark">dehaze</i>
                 </button>
-                <a class="navbar-brand fz-24 font-weight-bolder text-md-dark text-white" href="index.html">Craftsman</a>
+                <a class="navbar-brand  font-weight-bolder text-md-dark text-white h4" href="index.html">Craftsman</a>
                 <a class="nav-link pr-0 order-md-3" href="#" data-toggle="modal" data-target="#cart">
                     <i class="material-icons text-white">shopping_cart</i>
                 </a>
@@ -40,26 +41,24 @@
                 </div>
             </nav>
         </div>
-        <div class="container-fluid" style="position: relative;">
+        <div class="container-fluid position-relative">
             <div class="row justify-content-end">
-                <div class="col-md-6 bg-cover" style="background-image: url(https://images.unsplash.com/photo-1557644978-f61037cfbe49?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
-            position: absolute;
-            top: 0;bottom: 0;">
+                <div class="col-md-6 bg-cover position-absolute bg-item1 postion-y">
                 </div>
             </div>
             <div class="container">
-                <div class="row justify-content-start  py-6">
+                <div class="row justify-content-start  p-space">
                     <div class="col-md-6">
-                        <h2 class="fz-48 text-white text-md-dark">
+                        <h1 class="h1-md text-white text-md-dark">
                             Enjoy Your <br>
                             Minimalist Lifestyle.
-                        </h2>
-                        <p class="text-secondary2 fz-24 mb-5">
+                        </h1>
+                        <p class="text-secondary2 h4 mb-5">
                             The best crafts in Taiwan. Get your free <br>
                             shipping on the first order.
                         </p>
                         <a href="product.html"
-                            class="btn btn-md-lg btn-primary2 btn-block wh-226 d-flex align-items-center justify-content-center">Shop
+                            class="btn btn-md-lg btn-primary2 btn-block btn-style-m d-flex align-items-center justify-content-center">Shop
                             now</a>
                     </div>
                 </div>
@@ -68,13 +67,10 @@
     <section>
         <div class="container">
             <div class="row mb-4">
-                <div class="col-md-6 col-12 bg-cover h-400 mb-2" style="background-image: url(https://images.unsplash.com/photo-1473230841016-ca42011196d0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80);
-                ">
-
-                </div>
+                <div class="col-md-6 col-12 bg-cover bg-item2 h-md mb-2"></div>
                 <div class="col-md-6 col-12 d-flex flex-column justify-content-center align-items-center">
                     <div class="content">
-                        <h3 class="fz-24 font-weight-bolder mb-2">Special Clays</h3>
+                        <h4 class=" mb-2 font-weight-bolder">Special Clays</h4>
                         <p class="text-secondary2 mb-4">A general body formulation for contemporary <br>
                             earthenware is 25% kaolin, 25% ball clay, 35% <br>
                             quartz and 15% feldspar.
@@ -84,13 +80,10 @@
                 </div>
             </div>
             <div class="row flex-md-row-reverse mb-4">
-                <div class="col-md-6 col-12 bg-cover h-400 mb-2" style="background-image: url(https://images.unsplash.com/photo-1572725394982-fbee32027b77?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
-                ">
-
-                </div>
+                <div class="col-md-6 col-12 bg-cover h-md mb-2 bg-item3"></div>
                 <div class="col-md-6 col-12 d-flex flex-column justify-content-center align-items-center">
                     <div class="content">
-                        <h3 class="fz-24 font-weight-bolder mb-2">Less is more</h3>
+                        <h4 class=" mb-2 font-weight-bolder">Less is more</h4>
                         <p class="text-secondary2 mb-4">
                             Trimming pottery can transform a weighty Earth- <br>
                             bound pot into one that is a pleasure to hold, look <br>
@@ -101,13 +94,10 @@
                 </div>
             </div>
             <div class="row mb-5">
-                <div class="col-md-6 col-12 bg-cover h-400 mb-2" style="background-image: url(https://images.unsplash.com/photo-1541085478756-418a3402fcb7?ixlib=rb-1.2.1&auto=format&fit=crop&w=1267&q=80);
-                ">
-
-                </div>
+                <div class="col-md-6 col-12 bg-cover h-md mb-2 bg-item4"></div>
                 <div class="col-md-6 col-12 d-flex flex-column justify-content-center align-items-center">
                     <div class="content">
-                        <h3 class="fz-24 font-weight-bolder mb-2">Marvelous Detail</h3>
+                        <h4 class="mb-2 font-weight-bolder">Marvelous Detail</h4>
                         <p class="text-secondary2 mb-4">
                             In Craftsman, the art director, working with <br>
                             marketers, develops or creates an idea of a new <br>
@@ -119,16 +109,15 @@
             </div>
         </div>
     </section>
-    <section class="bg-cover mb-5" style="background-image: url(https://images.unsplash.com/photo-1579825317824-2cc3aa33f75a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80);
-    height:400px;">
+    <section class="bg-cover mb-5 bg-item5" style="height: 400px;">
         <div class="container">
-            <div class="d-flex  align-items-md-center justify-content-between text-white flex-column flex-md-row py-4"
+            <div class="d-flex align-items-md-center justify-content-between text-white flex-column flex-md-row py-4"
                 style="height: 400px;">
                 <p class="h2 font-weight-bolder">“I want to make the life <br>
                     more simple by crafts.”</p>
                 <ul class="list-unstyled">
                     <li class="text-secondary2">Art Director</li>
-                    <li class="fz-24 mb-2">Hsiao-Ming Chen</li>
+                    <li class="h4 mb-2">Hsiao-Ming Chen</li>
                     <li>
                         <a href="#" class="text-primary2 mr-4">Instagram</a>
                         <a href="#" class="text-primary2 ">Twitter</a>
@@ -142,9 +131,8 @@
             <div class="swiper-wrapper mb-5">
                 <div class="swiper-slide">
                     <div class="card">
-                        <div class="card-header bg-cover border-0 wh-350 "
-                            style="background-image: url(https://images.unsplash.com/photo-1556207944-1e0033a54801?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80);position: relative;">
-                            <p class="text-white p-3" style="position: absolute; top: 0 ;right: 0;">On Sale</p>
+                        <div class="card-header bg-item6 bg-cover border-0 wh-m position-relative">
+                            <p class="text-white p-3 position-absolute postion-rightTop">On Sale</p>
                         </div>
                         <div class="card-body">
                             <h4 class="font-weight-bolder">Tatami Cup</h4>
@@ -155,8 +143,7 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="card ">
-                        <div class="card-header bg-cover border-0 wh-350"
-                            style="background-image: url(https://images.unsplash.com/photo-1523367310297-83064fc42a16?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80);">
+                        <div class="card-header bg-cover border-0 wh-m bg-item7">
                         </div>
                         <div class="card-body">
                             <h4 class="font-weight-bolder">Couple Collection</h4>
@@ -166,8 +153,7 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="card ">
-                        <div class="card-header bg-cover border-0 wh-350"
-                            style="background-image: url(https://images.unsplash.com/photo-1559810087-893a00a35608?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);">
+                        <div class="card-header bg-cover border-0 wh-m bg-item8">
                         </div>
                         <div class="card-body">
                             <h4 class="font-weight-bolder">Brotherhood Vase</h4>
@@ -177,8 +163,7 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="card ">
-                        <div class="card-header bg-cover border-0 wh-350"
-                            style="background-image: url(https://images.unsplash.com/photo-1530006498959-b7884e829a04?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1266&q=80);">
+                        <div class="card-header bg-cover border-0 wh-m bg-item9">
                         </div>
                         <div class="card-body">
                             <h4 class="font-weight-bolder">Baifan Bowl</h4>
@@ -188,8 +173,7 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="card ">
-                        <div class="card-header bg-cover border-0 wh-350"
-                            style="background-image: url(https://images.unsplash.com/photo-1523976714396-3ee195e3b3a1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80);">
+                        <div class="card-header bg-cover border-0 wh-m bg-item10">
                         </div>
                         <div class="card-body">
                             <h4 class="font-weight-bolder">Limdae Cup</h4>
@@ -199,8 +183,7 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="card ">
-                        <div class="card-header bg-cover border-0 wh-350"
-                            style="background-image: url(https://images.unsplash.com/photo-1572003414077-38770ebec0a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);">
+                        <div class="card-header bg-cover border-0 wh-m bg-item11">
                         </div>
                         <div class="card-body">
                             <h4 class="font-weight-bolder">Kabi Mug</h4>
@@ -210,8 +193,7 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="card ">
-                        <div class="card-header bg-cover border-0 wh-350"
-                            style="background-image: url(https://images.unsplash.com/photo-1523264067855-7b9941f18ca9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80);">
+                        <div class="card-header bg-cover border-0 wh-m bg-item12">
                         </div>
                         <div class="card-body">
                             <h4 class="font-weight-bolder">Hana Vase</h4>
@@ -221,8 +203,7 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="card ">
-                        <div class="card-header bg-cover border-0 wh-350"
-                            style="background-image: url(https://images.unsplash.com/photo-1525973779373-015bdf68e579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80);">
+                        <div class="card-header bg-cover border-0 wh-m bg-item13">
                         </div>
                         <div class="card-body">
                             <h4 class="font-weight-bolder">Shiro Plate</h4>
@@ -232,8 +213,7 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="card ">
-                        <div class="card-header bg-cover border-0 wh-350"
-                            style="background-image: url(https://images.unsplash.com/photo-1572003414030-4175bcadd3cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);">
+                        <div class="card-header bg-cover border-0 wh-m bg-item14">
                         </div>
                         <div class="card-body">
                             <h4 class="font-weight-bolder">Ceramic Vase</h4>
@@ -243,8 +223,7 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="card ">
-                        <div class="card-header bg-cover border-0 wh-350"
-                            style="background-image: url(https://images.unsplash.com/photo-1523367310297-83064fc42a16?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80);">
+                        <div class="card-header bg-cover border-0 wh-m bg-item15">
                         </div>
                         <div class="card-body">
                             <h4 class="font-weight-bolder">Couple Collection</h4>
@@ -257,14 +236,13 @@
             <div class="swiper-pagination "></div>
         </div>
     </section>
-    <section class="bg-cover h-400  d-flex align-items-center"
-        style="background-image: url(https://images.unsplash.com/photo-1580485978320-cc2bc7dcf569?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);">
+    <section class="bg-cover h-md  d-flex align-items-center bg-item16">
         <div class="container">
-            <h2 class="fz-48 font-weight-bolder text-white mb-5">
+            <h2 class="h1 h1-md font-weight-bolder text-white mb-5">
                 Subscribe for news <br>
                 and special offers!
             </h2>
-            <div class="input-group mb-3 w-446">
+            <div class="input-group input-group-lg mb-3 w-m">
                 <input type="email" class="form-control bg-transparent" placeholder="Your email address"
                     aria-label="Recipient's username" aria-describedby="button-addon2">
                 <div class="input-group-append">
@@ -273,7 +251,7 @@
             </div>
         </div>
     </section>
-    <footer class="py-4" style="background-color: #121212;">
+    <footer class="py-4 bg-secondary5">
         <div class="container">
             <div class="d-md-flex justify-content-between">
                 <ul class="d-flex list-unstyled mb-md-0 mb-5">
@@ -376,6 +354,7 @@
             </div>
         </div>
     </div>
+
     <script src="https://unpkg.com/swiper/js/swiper.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
