--- a/weeko6/infromation.html
+++ b/weeko6/infromation.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container py-3">
-        <a class=" fz-24 font-weight-bolder  text-dark " href="index.html">Craftsman</a>
+        <a class="  font-weight-bolder  text-dark h4" href="index.html">Craftsman</a>
         <div class="d-block d-md-none mt-3">
             <a class="btn btn-link btn-block  d-flex  align-items-end text-decoration-none" data-toggle="collapse"
                 href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
