--- a/weeko6/payment.html
+++ b/weeko6/payment.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container py-3">
-        <a class=" fz-24 font-weight-bolder  text-dark " href="index.html">Craftsman</a>
+        <a class="  font-weight-bolder  text-dark h4" href="index.html">Craftsman</a>
         <div class="d-block d-md-none mt-3">
             <div class="card border-0 collapse multi-collapse mt-3" id="multiCollapseExample1">
                 <div class="py-3 px-3 card-header">
