--- a/weeko6/done.html
+++ b/weeko6/done.html
@@ -13,31 +13,27 @@
 
 <body>
     <header class="mb-5">
-        <div class="container" style="position: relative;">
-            <nav class="navbar navbar-expand-lg navbar-light bg-transparent px-0 postion-top">
-                <a class="navbar-brand fz-24 font-weight-bolder text-md-dark text-white p-3"
-                    href="index.html">Craftsman</a>
-            </nav>
+        <div class="container position-relative" >
+            <a class=" font-weight-bolder text-md-dark text-white h4  position-absolute postion-top p-4"  href="index.html">Craftsman</a>
+        </nav>
         </div>
-        <div class="container-fluid" style="position: relative;">
+        <div class="container-fluid position-relative">
             <div class="row justify-content-end">
-                <div class="col-md-6 bg-cover vh-100" style="background-image: url(https://images.unsplash.com/photo-1525168986767-293e2138b969?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80);
-            position: absolute;
-            top: 0;bottom: 0;">
+                <div class="col-md-6 bg-cover vh-100 position-absolute position-y bg-item17">
                 </div>
             </div>
             <div class="container">
-                <div class="row justify-content-start  py-md-6 ">
+                <div class="row justify-content-start ">
                     <div class="col-md-6 vh-100  d-flex align-items-center justify-content-center flex-column">
-                        <h2 class="fz-48 text-white text-md-dark mt-auto">
+                        <h2 class="h1 h1-md text-white text-md-dark mt-auto">
                             Well Done!
                         </h2>
-                        <p class="text-secondary2 fz-24 mb-5 mb-auto">
+                        <p class="text-secondary2 h4 mb-5 mb-auto">
                             Your order has been received. We’II email <br>
                             you an order confirmation with details.
                         </p>
                         <a href="product.html"
-                            class="btn btn-md-lg btn-primary2 wh-226 d-flex align-items-center justify-content-center mb-4 btn-block">Continue
+                            class="btn btn-md-lg btn-primary2 btn-style-m d-flex align-items-center justify-content-center mb-4 btn-block">Continue
                             shopping</a>
                     </div>
                 </div>
