--- a/week07/index.html
+++ b/week07/index.html
@@ -16,7 +16,7 @@
     <title>Fixie</title>
 </head>
 
-<body>
+<body class="x-hidden">
     <header>
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex" data-aos="fade-down">
@@ -44,7 +44,7 @@
     <section>
         <div class="container-fluid">
             <div class="row no-gutters" data-aos="fade-right">
-                <div class="col-6"  data-aos="fade-right">
+                <div class="col-6" data-aos="fade-right">
                     <div class="container-fluid">
                         <div class="d-flex align-items-center h-xl">
                             <div class=" pl-7">
@@ -58,13 +58,14 @@
                                     advantage of simplicity compared with the standard <br>
                                     multi-geared bicycle.
                                 </p>
-                                <a class="btn btn-primary btn-font-size btn-xl border" href="#" role="button">Shop
-                                    now</a>
+                                <a class="btn btn-primary btn-font-size btn-xl border" href="#" role="button">
+                                    Shop now
+                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-6 bg-cover bg-item1 h-xl"  data-aos="fade-left"></div>
+                <div class="col-6 bg-cover bg-item1 h-xl" data-aos="fade-left"></div>
             </div>
             <div class="row no-gutters" data-aos="fade-right">
                 <div class="col-6"></div>
@@ -92,7 +93,7 @@
     </section>
     <section>
         <div class="container-fluid ">
-            <div class="row no-gutters position-relative " >
+            <div class="row no-gutters position-relative ">
                 <div class="col-6 bg-cover bg-item2 h-xxl" data-aos="fade-right"></div>
                 <div class="col-6" data-aos="fade-left">
                     <div class=" d-flex   justify-content-between  flex-column h-xxl px-6 py-6">
@@ -107,7 +108,7 @@
                         </h2>
                     </div>
                 </div>
-                <div class="btn-group btn-group-lg position-absolute btn-center" data-aos="fade-down" >
+                <div class="btn-group btn-group-lg position-absolute btn-center" data-aos="fade-down">
                     <a href="#" class="btn font-weight-bolder btn-primary ">
                         Read More
                     </a>
@@ -167,7 +168,8 @@
         <div class="bg-primary">
             <div class="container">
                 <div class="bg-cover h-l bg-item4 position-relative">
-                    <div class="py-3 px-3 bg-white content-xl position-absolute content-center rounded" data-aos="fade-down">
+                    <div class="py-3 px-3 bg-white content-xl position-absolute content-center rounded"
+                        data-aos="fade-down">
                         <p class="h4  mb-3">
                             “I like to ride. Fixed gear. No brakes. <br>
                             Can’t stop. Don’t want to, either.”
@@ -182,7 +184,7 @@
     <section class="mb-6">
         <div class="container">
             <div class="d-flex">
-                <div class="card card-xl mr-2" data-aos="fade-left">
+                <div class="card card-xl mr-2 border-0" data-aos="fade-left">
                     <img src="https://images.unsplash.com/photo-1565291395961-ec8c830a1227?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
                         class="card-img-top" alt="..." height="600px">
                     <div class="card-body px-0">
@@ -197,7 +199,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="card card-xl mr-2" data-aos="fade-down">
+                <div class="card card-xl mr-2  border-0" data-aos="fade-down">
                     <img src="https://images.unsplash.com/photo-1571932148037-0da9166b18f1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=633&q=80"
                         class="card-img-top" alt="..." height="600px">
                     <div class="card-body px-0">
@@ -212,7 +214,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="card card-xl" data-aos="fade-right">
+                <div class="card card-xl  border-0" data-aos="fade-right">
                     <img src="https://images.unsplash.com/photo-1548774432-8d118269f9ee?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
                         class="card-img-top" alt="..." height="600px">
                     <div class="card-body px-0">
@@ -234,7 +236,7 @@
         <div class="bg-primary">
             <div class="container">
                 <div class="py-4 px-5">
-                    <div class="d-flex justify-content-between align-items-center" >
+                    <div class="d-flex justify-content-between align-items-center">
                         <ul class="list-unstyled d-flex mb-0">
                             <li class="mr-5">
                                 <a href="#" class="text-dark text-decoration-none h6">
@@ -252,7 +254,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <small class="text-secondary" >
+                        <small class="text-secondary">
                             © 2020 Fixie. All Rights Reserved.
                         </small>
                         <a href="#" class="text-dark h3 text-decoration-none font-italic font-weight-bolder">
@@ -276,10 +278,10 @@
         crossorigin="anonymous"></script>
     <!-- AOS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script>
-    AOS.init();
-</script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
