--- a/week08/detail.html
+++ b/week08/detail.html
@@ -13,6 +13,7 @@
 
 <body>
     <header class="sticky-top bg-white">
+        <!-- navbar start -->
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-transparent px-0">
                 <button class="navbar-toggler border-0 pl-0" type="button" data-toggle="collapse"
@@ -46,6 +47,8 @@
                 </div>
             </nav>
         </div>
+        <!-- navbar end -->
+        <!-- search screen & table start -->
         <div class="bg-secondary2 p-4 rounded d-md-block d-none">
             <div class="container">
                 <div class="row">
@@ -201,6 +204,8 @@
                 </div>
             </div>
         </div>
+        <!-- search screen & table end-->
+        <!-- search moblie start-->
         <div class="bg-secondary2">
             <div class="container">
                 <ul class="list-unstyled d-flex d-md-none py-3 justify-content-between">
@@ -227,8 +232,10 @@
                 </ul>
             </div>
         </div>
+        <!-- search moblie end-->
     </header>
     <!-- Layout -->
+    <!-- album screen & table start  -->
     <section class="d-md-block d-none">
         <div class="container">
             <div class="row no-gutters">
@@ -256,6 +263,8 @@
             </div>
         </div>
     </section>
+    <!-- album screen & table end  -->
+    <!-- album moblie start  -->
     <section class="d-md-none d-block">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
@@ -282,6 +291,8 @@
             </a>
         </div>
     </section>
+    <!-- album moblie end  -->
+    <!-- room introduce start -->
     <section class="mt-4">
         <div class="container ">
             <div class="d-md-flex d-block align-items-center">
@@ -303,11 +314,14 @@
             </p>
         </div>
     </section>
+    <!-- room introduce end -->
+
     <section>
         <div class="container">
             <h4 class="mb-4">
                 Select your room
             </h4>
+            <!-- Select your room top menu start -->
             <ul class="list-unstyled d-md-flex d-none mb-5">
                 <li class="bg-secondary2 text-secondary py-2 px-3 mr-2">
                     Bangkok, Thailand
@@ -322,6 +336,8 @@
                     EDIT DETAIL
                 </li>
             </ul>
+            <!-- Select your room top menu end -->
+            <!-- Room Type start  -->
             <div class="row d-md-flex d-none mb-4">
                 <div class="col-6 ">
                     <h6 class="font-weight-bolder ">
@@ -670,8 +686,10 @@
                     </a>
                 </div>
             </div>
+            <!-- Room Type end  -->
         </div>
     </section>
+    <!-- Subscribe  start  -->
     <section>
         <div class="bg-secondary2 ">
             <div class="container">
@@ -694,6 +712,7 @@
             </div>
         </div>
     </section>
+    <!-- Subscribe end  -->
     <!-- Layout -->
     <footer>
         <div class="container">
