--- a/week08/login.html
+++ b/week08/login.html
@@ -13,6 +13,7 @@
 
 <body>
     <section class="container-lg container-fluid  position-relative ">
+        <!-- side background start -->
         <div class="row justify-content-start ">
             <div class="col-lg-8 bg-cover position-absolute absolute-y bg-item1 vh-100 d-none d-md-block py-4 pl-6">
                 <div class="d-flex flex-column h-100 ">
@@ -33,7 +34,8 @@
                 </div>
             </div>
         </div>
-
+        <!-- side background end -->
+        <!-- Login start -->
         <div class="container">
             <div class="row justify-content-end ">
                 <div class="col-lg-4 vh-100 d-flex pt-md-6 justify-content-center">
@@ -77,6 +79,7 @@
                 </div>
             </div>
         </div>
+        <!-- Login end -->
     </section>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
