--- a/week08/member.html
+++ b/week08/member.html
@@ -50,8 +50,10 @@
         </div>
     </header>
     <!-- Layout -->
+
     <div class="container">
         <div class="row">
+            <!-- booking details top start  -->
             <div class="col-lg-8 order-2 order-lg-1 mb-5 mb-lg-0">
                 <h4 class="mb-4">
                     My Bookings
@@ -60,6 +62,8 @@
                     <a href="#" class="text-primary font-weight-bolder  mr-4">Upcoming</a>
                     <a href="#" class="text-dark font-weight-bolder">Completed</a>
                 </div>   
+                <!-- booking details top end  -->
+                <!-- booking details start  -->
                 <div class="row ">
                     <div class="col-md-5 mb-md-0 mb-4 rounded-md bg-cover h-sm bg-item2"></div>
                     <div class="col-md-7 ">
@@ -103,7 +107,7 @@
                             </li>
                         </ul>                     
                     </div>
-                </div>
+                </div>               
                 <div class="row">
                     <div class="col-md-5 mb-md-0 mb-4 rounded-md bg-cover h-sm bg-item3"></div>
                     <div class="col-md-7">
@@ -147,9 +151,11 @@
                             </li>
                         </ul>
                     </div>
-                </div>                   
+                </div>  
             </div>
+            <!-- booking details end -->
             <div class="col-lg-4 order-1 order-lg-2">
+                <!-- user details top start -->
                 <div class="d-flex mb-4 align-items-center">
                     <h4 class="mr-1 mb-0 ">
                         Profile
@@ -162,6 +168,8 @@
                         EDIT
                     </a>
                 </div>
+                <!-- user details top end -->
+                <!-- user details start-->
                 <div class="row bg-secondary2 py-5 rounded">
                     <div class="col-lg-12 col-md-5 ">
                         <div class="container">
@@ -212,7 +220,8 @@
                             </div>
                         </div>               
                     </div>
-                </div>        
+                </div>  
+                <!-- user details end-->      
             </div>
         </div>
     </div>
