--- a/week08/reserve.html
+++ b/week08/reserve.html
@@ -49,6 +49,7 @@
     </header>
     <!-- Layout -->
     <div class="container">
+        <!-- Booking details moblie start -->
         <div class="accordion d-md-none d-block" id="accordionExample">
             <div class="card bg-secondary2">
                 <div class="card-header" id="headingOne">
@@ -107,6 +108,8 @@
                 </div>
             </div>
         </div>
+        <!-- Booking details moblie end -->
+        <!-- Reservation details start -->
         <div class="row">
             <div class="col-md-6 ">
                 <h2 class="mb-4">Reservation details</h2>
@@ -167,6 +170,7 @@
                 </div>
             </div>
         </div>
+        <!-- Reservation details end -->
     </div>
 
     <!-- Layout -->
