--- a/week08/result.html
+++ b/week08/result.html
@@ -13,6 +13,7 @@
 
 <body>
     <header class="sticky-top bg-white">
+        <!-- navbar start -->
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-transparent px-0">
                 <button class="navbar-toggler border-0 pl-0" type="button" data-toggle="collapse"
@@ -46,6 +47,8 @@
                 </div>
             </nav>
         </div>
+        <!-- navbar end -->
+        <!-- search screen & table start -->
         <div class="bg-secondary2 p-4 rounded d-md-block d-none">
             <div class="container">
                 <div class="row">
@@ -201,6 +204,8 @@
                 </div>
             </div>
         </div>
+        <!-- search screen & table end -->
+        <!-- search moblie start -->
         <div class="bg-secondary2">
             <div class="container">
                 <ul class="list-unstyled d-flex d-md-none py-3 justify-content-between">
@@ -222,6 +227,7 @@
                 </ul>
             </div>
         </div>
+        <!-- search moblie end -->
     </header>
     <!-- Layout -->
     <section class="mb-5 mb-lg-6">
@@ -232,7 +238,7 @@
                         Bangkok
                         <small class="align-top text-primary ">3,240</small>
                     </h2>
-                    <!-- moblie -->
+                    <!-- moblie filter & sort start-->
                     <div class="container d-md-none d-block">
                         <div class="row mb-1">
                             <div class="col-6 d-flex justify-content-center align-items-center">
@@ -265,8 +271,9 @@
                             </div>
                         </div>
                     </div>
-                    <!-- desk -->
-                    <div class="bg-secondary2 pt-4 px-4 d-none d-md-block">
+                    <!-- moblie filter & sort end-->
+                    <!-- desk sidebar start-->
+                    <div class="bg-secondary2 py-4 px-4 d-none d-md-block">
                         <form action="" class="mb-5">
                             <label for="cancellation" class="h5 mb-3">Deals</label>
                             <div class="form-group  form-check">
@@ -396,8 +403,10 @@
                             </div>
                         </form>
                     </div>
+                    <!-- desk sidebar end-->
                 </div>
                 <div class="col-md-8">
+                    <!-- desk sort start -->
                     <ul class="list-unstyled mb-4  mt-3 d-md-flex d-none">
                         <li class="h6 mr-4 text-primary">
                             <a href="#">
@@ -420,6 +429,8 @@
                             </a>
                         </li>
                     </ul>
+                    <!-- desk sort end-->
+                    <!-- Room type introduction start -->
                     <div class="media mb-lg-5 mb-md-4 mb-1">
                         <a href="detail.html">
                             <img src="https://images.unsplash.com/photo-1560747571-e9b3c7e7868c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=80"
@@ -866,6 +877,8 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Room type introduction end -->
+                    <!-- Pagination start-->
                     <div class="bg-secondary2">
                         <div class="container">
                             <div class="d-flex justify-content-between">
@@ -908,10 +921,12 @@
                             </div>
                         </div>
                     </div>
+                <!-- Pagination end -->
                 </div>
             </div>
         </div>
     </section>
+    <!-- Subscribe start -->
     <section>
         <div class="bg-secondary2 ">
             <div class="container">
@@ -934,6 +949,7 @@
             </div>
         </div>
     </section>
+    <!-- Subscribe end-->
     <!-- Layout -->
     <footer>
         <div class="container">
