--- a/week08/success.html
+++ b/week08/success.html
@@ -49,6 +49,7 @@
     </header>
     <!-- Layout -->
     <div class="container">
+        <!-- Reservation received start  -->
         <h2 class="mb-5">Reservation received!</h2>
         <div class="row mb-3">
             <div class="col-3">
@@ -125,6 +126,7 @@
                 </a>
             </div>
         </div>
+        <!-- Reservation received end  -->
     </div>
     <!-- Layout -->
     <footer class="position-md-absolute position-bottom vw-100 d-block mt-6">
