--- a/week08/index.html
+++ b/week08/index.html
@@ -51,6 +51,7 @@
         </div>
     </header>
     <!-- Layout -->
+        <!-- Discover your ideal hotel collapse start -->
     <section class="position-relative">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner ">
@@ -69,9 +70,9 @@
                 <div class="carousel-item">
                     <div class="bg-cover w-100 d-block bg-item5 d-flex justify-content-center align-items-center"
                         style="height: 320px;">
-                        <h1 class="text-white d-md-block d-none">
+                        <h2 class="text-white d-md-block d-none h1">
                             Discover your ideal hotel
-                        </h1>
+                        </h2>
                         <h2 class="text-white d-md-none d-block text-center">
                             Discover your <br>
                             ideal hotel
@@ -81,9 +82,9 @@
                 <div class="carousel-item">
                     <div class="bg-cover w-100 d-block bg-item6 d-flex justify-content-center align-items-center"
                         style="height: 320px;">
-                        <h1 class="text-white d-md-block d-none">
+                        <h2 class="text-white d-md-block d-none h1">
                             Discover your ideal hotel
-                        </h1>
+                        </h2>
                         <h2 class="text-white d-md-none d-block text-center">
                             Discover your <br>
                             ideal hotel
@@ -100,12 +101,14 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-        <div class="bg-secondary2 p-4 rounded position-absolute position-center">
+        <!-- Discover your ideal hotel collapse end -->
+        <!-- search  start -->
+        <div class="bg-secondary2 p-4 py-5 rounded position-absolute position-center">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3">
-                        <div class="bg-white mr-lg-3 mb-3 mb-lg-0 ">
-                            <a class="nav-link  text-secondary" href="#" id="Destination" role="button"
+                        <div class="bg-white mr-lg-3 mb-3 mb-lg-0">
+                            <a class="nav-link  text-secondary " href="#" id="Destination" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="material-icons vertical-align-bottom text-dark">location_on</span>
                                 Destination
@@ -255,7 +258,9 @@
                 </div>
             </div>
         </div>
+        <!-- search  end -->
     </section>
+    <!-- Top Choices start -->
     <section class="mt-xl mb-4">
         <div class="container">
             <h2 class="mb-4 h4-md">
@@ -446,6 +451,8 @@
             </div>
         </div>
     </section>
+    <!-- Top Choices end -->
+    <!-- Popular Destinations start -->
     <section class="mb-4">
         <div class="container">
             <h2 class="mb-4 h4-md">
@@ -453,9 +460,9 @@
             </h2>
             <ul class="d-md-flex d-block list-unstyled flex-wrap">
                 <li class="bg-cover bg-item9 w-destinations m-destinations mb-4">
-                    <div class="px-4 py-3 d-flex justify-content-between align-items-center">
+                    <div class="px-4 py-3 d-flex justify-content-between align-items-center bg-lightBlack ">
                         <div class="content ">
-                            <p class="font-size-small text-secondary mb-0 ">
+                            <p class="font-size-small color-gray mb-0 ">
                                 JAPAN
                             </p>
                             <h4 class="text-white">
@@ -466,9 +473,9 @@
                     </div>
                 </li>
                 <li class="bg-cover bg-item10 w-destinations m-destinations  mb-4">
-                    <div class="px-4 py-3 d-flex justify-content-between align-items-center">
+                    <div class="px-4 py-3 d-flex justify-content-between align-items-center bg-lightBlack">
                         <div class="content">
-                            <p class="font-size-small text-secondary mb-0">
+                            <p class="font-size-small color-gray mb-0">
                                 JAPAN
                             </p>
                             <h4 class="text-white">
@@ -479,22 +486,22 @@
                     </div>
                 </li>
                 <li class="bg-cover bg-item11 w-destinations  m-md-destinations mb-4">
-                    <div class="px-4 py-3 d-flex justify-content-between align-items-center">
+                    <div class="px-4 py-3 d-flex justify-content-between align-items-center bg-lightBlack">
                         <div class="content">
-                            <p class="font-size-small text-secondary mb-0">
+                            <p class="font-size-small color-gray mb-0">
                                 iceland
                             </p>
                             <h4 class="text-white">
                                 Reykjavík
                             </h4>
                         </div>
-                        <span class="material-icons text-primary">keyboard_arrow_down</span>
+                        <span class="material-icons text-white">keyboard_arrow_down</span>
                     </div>
                 </li>
                 <li class="bg-cover bg-item12 w-destinations m-destinations mb-4">
-                    <div class="px-4 py-3 d-flex justify-content-between align-items-center">
+                    <div class="px-4 py-3 d-flex justify-content-between align-items-center bg-lightBlack">
                         <div class="content">
-                            <p class="font-size-small text-secondary mb-0">
+                            <p class="font-size-small color-gray mb-0">
                                 London
                             </p>
                             <h4 class="text-white">
@@ -505,9 +512,9 @@
                     </div>
                 </li>
                 <li class="bg-cover bg-item13 w-destinations m-destinations  mb-4">
-                    <div class="px-4 py-3 d-flex justify-content-between align-items-center">
+                    <div class="px-4 py-3 d-flex justify-content-between align-items-center bg-lightBlack">
                         <div class="content">
-                            <p class="font-size-small text-secondary mb-0">
+                            <p class="font-size-small color-gray mb-0">
                                 Italy
                             </p>
                             <h4 class="text-white">
@@ -518,9 +525,9 @@
                     </div>
                 </li>
                 <li class="bg-cover bg-item14 w-destinations  mb-4">
-                    <div class="px-4 py-3 d-flex justify-content-between align-items-center">
+                    <div class="px-4 py-3 d-flex justify-content-between align-items-center bg-lightBlack">
                         <div class="content">
-                            <p class="font-size-small text-secondary mb-0">
+                            <p class="font-size-small color-gray mb-0">
                                 Thailand
                             </p>
                             <h4 class="text-white">
@@ -533,6 +540,8 @@
             </ul>
         </div>
     </section>
+    <!-- Popular Destinations end -->
+    <!-- Get Inspiration start -->
     <section class="mb-4">
         <div class="container">
             <div class="d-flex justify-content-between mb-4">
@@ -540,7 +549,7 @@
                     Get Inspiration
                 </h2>
                 <a href="#"
-                    class="btn btn-outline-primary font-weight-bolder font-size-small d-flex align-items-center">
+                    class="btn btn-outline-primary font-weight-bolder font-size-small d-flex align-items-center ">
                     SEE MORE
                 </a>
             </div>
@@ -586,12 +595,14 @@
             </div>
         </div>
     </section>
+    <!-- Get Inspiration end -->
+    <!-- Subscribe start -->
     <section>
         <div class="bg-secondary2 ">
             <div class="container">
                 <div class="d-flex justify-content-center align-items-center">
                     <div class="subscribe-sapce">
-                        <h2 class="h1 mb-4 h4-md">
+                        <h2 class="h1 mb-4 h4-md font-weight-bolder">
                             Subscribe for Exclusive Offer
                         </h2>
                         <div class="input-group input-group-lg">
@@ -606,6 +617,7 @@
             </div>
         </div>
     </section>
+    <!-- Subscribe end -->
     <!-- Layout -->
     <footer>
         <div class="container">
