--- a/jQuery-finalwork/index.html
+++ b/jQuery-finalwork/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body >
     <header>
         <div class="container">
             <div class="py-2 bg-secondary4">
@@ -311,6 +313,27 @@
             </div>
         </div>
     </footer>
+    <!-- ad&top -->
+    <div class="fixed-bottom bg-dark w-25 jq-ad-none">
+        <div class="d-flex justify-content-between p-3">
+            <p class="text-white">喜歡我請訂閱 <br>
+                按讚加分享 <br>
+                和開啟小鈴鐺    
+            </p>
+            <a href="#" class="jq-ad">
+                <span class="material-icons">
+                    clear
+                </span>
+            </a>
+        </div>
+    </div>
+    <div class="fixed-bottom  top">
+        <a href="#" class="jq-top">
+            <span class="material-icons h1">
+                navigation
+            </span>
+        </a>
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
