--- a/jsDay20/index.html
+++ b/jsDay20/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -29,9 +31,14 @@
                 <a href="#" class="btn">
                     確認
                 </a>
-                <a href="#" class="btn-outline">
-                    全部清除
-                </a>
+                <div class="d-flex">
+                    <a href="#" class="btn-outline">
+                        全部清除
+                    </a>
+                    <a href="#" class="average">
+                        平均
+                    </a>
+                </div>
             </div>
         </div>
     </section>
@@ -42,7 +49,21 @@
             </ul>
         </div>
     </section>
-    <script src="js/style.js"></script>
+    <section>
+        <div class="modal d-none">
+            <div class="d-flex align-items-center justify-content-center" style="height: 100%;">
+                <p>總計測量<span class="modal-times"></span>次，平均 BMI 為<span class="modal-bmi"></span></p>
+                <a href="#" class="clear ">
+                    <span class="material-icons ">
+                        clear
+                    </span>
+                </a>
+            
+            </div>
+            
+        </div>
+    </section>
+    <script src="js/all.js"></script>
 </body>
 
 </html>
